--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="backgound-layer">
             <img class="theme__bg left__bg animate__animated animate__fadeInUp" src="" alt="">
             <img class="theme__bg right__bg animate__animated animate__fadeInUp" src="" alt="">
-            <img class="center__bg animate__animated animate__fadeInUp" src="./images/Achievement.svg" alt="">
+            <img class="center__bg animate__animated animate__fadeInUp" src="./Achievement.svg" alt="">
         </div>
         <div class="animate__animated animate__fadeInDown step step__1 active slogan">
             <div>
