--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
     <!-- Nhung chat bot -->
     <script>
         window.embeddedChatbotConfig = {
-            chatbotId: "8PK7AYXz-QR9H6RFI7vAe",
+            chatbotId: "mD9CGOMApvOg55SEFEegX",
             domain: "www.chatbase.co"
         }
     </script>
-    <script src="https://www.chatbase.co/embed.min.js" chatbotId="8PK7AYXz-QR9H6RFI7vAe" domain="www.chatbase.co" defer>
+    <script src="https://www.chatbase.co/embed.min.js" chatbotId="mD9CGOMApvOg55SEFEegX" domain="www.chatbase.co" defer>
     </script>
 <script>!function(s,u,b,i,z){var o,t,r,y;s[i]||(s._sbzaccid=z,s[i]=function(){s[i].q.push(arguments)},s[i].q=[],s[i]("setAccount",z),r=["widget.subiz.net","storage.googleapis"+(t=".com"),"app.sbz.workers.dev",i+"a"+(o=function(k,t){var n=t<=6?5:o(k,t-1)+o(k,t-3);return k!==t?n:n.toString(32)})(20,20)+t,i+"b"+o(30,30)+t,i+"c"+o(40,40)+t],(y=function(k){var t,n;s._subiz_init_2094850928430||r[k]&&(t=u.createElement(b),n=u.getElementsByTagName(b)[0],t.async=1,t.src="https://"+r[k]+"/sbz/app.js?accid="+z,n.parentNode.insertBefore(t,n),setTimeout(y,2e3,k+1))})(0))}(window,document,"script","subiz", "acsivgswwchxjfvpqodq")</script>
     
